--- a/tipologi_wilayah_sumsel.qmd
+++ b/tipologi_wilayah_sumsel.qmd
@@ -80,6 +80,7 @@ read_csv("data_preprocessed/metadata_bahasa_indonesia.csv") |>
 ## Skema Teknis Pembuatan Tipologi
 
 ![](output/flowchart_typology.svg){height="800" width="1200" fig-align="center"}
+:::
 
 ## Intisari Hasil PCA
 
@@ -126,10 +127,12 @@ pca_df |>
 ```
 
 ------------------------------------------------------------------------
-
+::: panel-tabset
 ### Interpretasi Komponen Utama (PCs)
 
-**PC1: Predominan Bahaya Longsor, Tutupan Hutan, Topografi dan Demografi**
+**PC1: Predominan Gradien Daratan Rendah-Tinggi**
+Komponen Utama 1 (PC1) menunjukkan gradien daratan tinggi-rendah (elevasi) yang dicerminkan dari variabel-variabel seperti jarak ke kanal dan gambut, rata-rata temperatur, indeks bahaya longsor, serta potensi perubahan temperatur di masa mendatang.
+
 
 ```{r loadings_PC1}
 #| warning: false
@@ -140,9 +143,9 @@ fviz_cos2(pca_result, choice = "var", axes = 1, top=10)
 ```
 
 
+**PC2: Predominan Gradien Demografi**
 
-
-**PC2: Predominan Bahaya Hidrologis dan Ketersediaan Air Permukaan**
+Komponen Utama 2 (PC2) menunjukkan gradien aspek demografi yang dicerminkan dari variabel-variabel seperti jumlah penduduk, jumlah penduduk dengan pekerjaan yang bergantung pada sumber daya alam (SDA), derajat kemiskinan, dan jenis mata-pencaharian utama.
 ```{r loadings_PC2}
 #| warning: false
 #| message: false
@@ -151,31 +154,15 @@ var <- get_pca_var(pca_result)
 fviz_cos2(pca_result, choice = "var", axes = 2, top=10)
 ```
 
-**PC3: Predominan Aksesibilitas terhadap air dan luas Kecamatan** 
+**PC3: Predominan Gradien Intensitas Penggunaan Lahan** 
+
+Komponen Utama 3 (PC3) menunjukkan gradien intensitas penggunaan lahan yang dicerminkan dari variabel-variabel seperti jarak ke perkebunan karet, hutan alami, kejadian deforestasi, dan luasan area budidaya.
 ```{r loadings_PC3}
 #| warning: false
 #| message: false
 #| 
 var <- get_pca_var(pca_result)
 fviz_cos2(pca_result, choice = "var", axes = 3, top=10)
-```
-
-**PC4: Predominan karakteristik iklim**
-```{r loadings_PC4}
-#| warning: false
-#| message: false
-#| 
-var <- get_pca_var(pca_result)
-fviz_cos2(pca_result, choice = "var", axes = 4, top=10)
-```
-
-**PC5: Predominan Aktivitas perubahan tutupan hutan dan fasilitas publik**
-```{r loadings_PC5}
-#| warning: false
-#| message: false
-#| 
-var <- get_pca_var(pca_result)
-fviz_cos2(pca_result, choice = "var", axes = 5, top=10)
 ```
 
 ### Evaluasi Hasil Analisis Komponen Utama
@@ -193,17 +180,61 @@ Grafik scree memperlihatkan penurunan proporsi variansi (PVE) dari setiap kompon
 ### Diagram pencar 3D tipologi desa-desa di Provinsi Sumatera Selatan
 
 -   Sumbu x,y dan z dari diagram pencar merupakan tiga komponen utama teratas dari hasil PCA.
-    -   **PC1: Predominan Bahaya Longsor, Tutupan Hutan, Topografi dan Demografi**
-    -   **PC2: Predominan Bahaya Hidrologis dan Ketersediaan Air Permukaan**
-    -   **PC3: Predominan Aksesibilitas terhadap air dan luas Kecamatan**
--   Tiap-titiknya mewakili sebuah kecamatan di Provinsi Nusa Tenggara Timur
+    -   **PC1: Predominan Gradien Daratan Rendah-Tinggi**
+    -   **PC2: Predominan Gradien Demografi**
+    -   **PC3: Predominan Gradien Intensitas Penggunaan Lahan**
+-   Tiap-titiknya mewakili sebuah desa di Provinsi Sumatera Selatan
 -   Titik yang berwarna sama berarti tergolong dalam tipologi yang sama.
 
 ```{r K-means cluster}
 #| warning: false
 #| message: false
-# tar_load(plot_3d_scatter)
-# plot_3d_scatter
+# Load PCA results
+pca_results <- readRDS("output/pca_result_sumsel.rds")
+
+# Read and preprocess input data 
+village_data <- read_csv("data_preprocessed/main_df_sumsel.csv") %>%
+  mutate(village_id = as.character(iddesa))
+
+# Read cluster data
+cluster_data <- sf::st_read("output/cluster_map_SumSel.shp") %>% 
+  st_drop_geometry() %>% 
+  select(village_id = iddesa, cluster = k_8)
+
+# Combine village metadata with cluster assignments
+village_metadata <- village_data %>% 
+  mutate(iddesa=as.character(iddesa)) %>% 
+  select(
+    village_id = iddesa,
+    district_name = nmkab,
+    subdistrict_name = nmkec, 
+    village_name = nmdesa
+  ) %>% 
+  left_join(cluster_data, by = "village_id")
+
+# Create labeled PCA data frame
+pca_labeled <- tibble(
+  cbind(village_metadata, pca_results$x[,1:3])
+) %>% 
+  mutate(cluster = as.factor(cluster))
+  
+# Create interactive 3D PCA plot
+pca_plot_3d <- plot_ly(
+  data = pca_labeled,
+  x = ~PC1,
+  y = ~PC2,
+  z = ~PC3,
+  color = ~cluster,
+  type = "scatter3d",
+  text = ~paste(
+    "District:", district_name,
+    "<br>Subdistrict:", subdistrict_name,
+    "<br>Village:", village_name
+  ),
+  mode = "markers"
+)
+
+pca_plot_3d
 ```
 
 ### Validasi Klaster
